// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/radio/demo/basic.md correctly 1`] = `
<label
  class="infini-radio-wrapper"
>
  <span
    class="infini-radio"
  >
    <input
      class="infini-radio-input"
      type="radio"
    />
    <span
      class="infini-radio-inner"
    />
  </span>
  <span>
    Radio
  </span>
</label>
`;

exports[`renders ./components/radio/demo/disable.md correctly 1`] = `
<div>
  <label
    class="infini-radio-wrapper infini-radio-wrapper-disabled"
  >
    <span
      class="infini-radio infini-radio-disabled"
    >
      <input
        class="infini-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="infini-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>
  <br />
  <label
    class="infini-radio-wrapper infini-radio-wrapper-disabled"
  >
    <span
      class="infini-radio infini-radio-checked infini-radio-disabled"
    >
      <input
        checked=""
        class="infini-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="infini-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>
  <div
    style="margin-top:20px"
  >
    <button
      class="infini-btn infini-btn-primary"
      type="button"
    >
      <span>
        Toggle disabled
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiobutton.md correctly 1`] = `
<div>
  <div>
    <div
      class="infini-radio-group infini-radio-group-outline"
    >
      <label
        class="infini-radio-button-wrapper infini-radio-button-wrapper-checked"
      >
        <span
          class="infini-radio-button infini-radio-button-checked"
        >
          <input
            checked=""
            class="infini-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="b"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="infini-radio-group infini-radio-group-outline"
    >
      <label
        class="infini-radio-button-wrapper infini-radio-button-wrapper-checked"
      >
        <span
          class="infini-radio-button infini-radio-button-checked"
        >
          <input
            checked=""
            class="infini-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper infini-radio-button-wrapper-disabled"
      >
        <span
          class="infini-radio-button infini-radio-button-disabled"
        >
          <input
            class="infini-radio-button-input"
            disabled=""
            type="radio"
            value="b"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="infini-radio-group infini-radio-group-outline"
    >
      <label
        class="infini-radio-button-wrapper infini-radio-button-wrapper-checked infini-radio-button-wrapper-disabled"
      >
        <span
          class="infini-radio-button infini-radio-button-checked infini-radio-button-disabled"
        >
          <input
            checked=""
            class="infini-radio-button-input"
            disabled=""
            type="radio"
            value="a"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper infini-radio-button-wrapper-disabled"
      >
        <span
          class="infini-radio-button infini-radio-button-disabled"
        >
          <input
            class="infini-radio-button-input"
            disabled=""
            type="radio"
            value="b"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper infini-radio-button-wrapper-disabled"
      >
        <span
          class="infini-radio-button infini-radio-button-disabled"
        >
          <input
            class="infini-radio-button-input"
            disabled=""
            type="radio"
            value="c"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper infini-radio-button-wrapper-disabled"
      >
        <span
          class="infini-radio-button infini-radio-button-disabled"
        >
          <input
            class="infini-radio-button-input"
            disabled=""
            type="radio"
            value="d"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiobutton-solid.md correctly 1`] = `
<div>
  <div>
    <div
      class="infini-radio-group infini-radio-group-solid"
    >
      <label
        class="infini-radio-button-wrapper infini-radio-button-wrapper-checked"
      >
        <span
          class="infini-radio-button infini-radio-button-checked"
        >
          <input
            checked=""
            class="infini-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="b"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="infini-radio-group infini-radio-group-solid"
    >
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper infini-radio-button-wrapper-disabled"
      >
        <span
          class="infini-radio-button infini-radio-button-disabled"
        >
          <input
            class="infini-radio-button-input"
            disabled=""
            type="radio"
            value="b"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper infini-radio-button-wrapper-checked"
      >
        <span
          class="infini-radio-button infini-radio-button-checked"
        >
          <input
            checked=""
            class="infini-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup.md correctly 1`] = `
<div
  class="infini-radio-group infini-radio-group-outline"
>
  <label
    class="infini-radio-wrapper infini-radio-wrapper-checked"
  >
    <span
      class="infini-radio infini-radio-checked"
    >
      <input
        checked=""
        class="infini-radio-input"
        type="radio"
        value="1"
      />
      <span
        class="infini-radio-inner"
      />
    </span>
    <span>
      A
    </span>
  </label>
  <label
    class="infini-radio-wrapper"
  >
    <span
      class="infini-radio"
    >
      <input
        class="infini-radio-input"
        type="radio"
        value="2"
      />
      <span
        class="infini-radio-inner"
      />
    </span>
    <span>
      B
    </span>
  </label>
  <label
    class="infini-radio-wrapper"
  >
    <span
      class="infini-radio"
    >
      <input
        class="infini-radio-input"
        type="radio"
        value="3"
      />
      <span
        class="infini-radio-inner"
      />
    </span>
    <span>
      C
    </span>
  </label>
  <label
    class="infini-radio-wrapper"
  >
    <span
      class="infini-radio"
    >
      <input
        class="infini-radio-input"
        type="radio"
        value="4"
      />
      <span
        class="infini-radio-inner"
      />
    </span>
    <span>
      D
    </span>
  </label>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-more.md correctly 1`] = `
<div
  class="infini-radio-group infini-radio-group-outline"
>
  <label
    class="infini-radio-wrapper infini-radio-wrapper-checked"
    style="display:block;height:30px;line-height:30px"
  >
    <span
      class="infini-radio infini-radio-checked"
    >
      <input
        checked=""
        class="infini-radio-input"
        type="radio"
        value="1"
      />
      <span
        class="infini-radio-inner"
      />
    </span>
    <span>
      Option A
    </span>
  </label>
  <label
    class="infini-radio-wrapper"
    style="display:block;height:30px;line-height:30px"
  >
    <span
      class="infini-radio"
    >
      <input
        class="infini-radio-input"
        type="radio"
        value="2"
      />
      <span
        class="infini-radio-inner"
      />
    </span>
    <span>
      Option B
    </span>
  </label>
  <label
    class="infini-radio-wrapper"
    style="display:block;height:30px;line-height:30px"
  >
    <span
      class="infini-radio"
    >
      <input
        class="infini-radio-input"
        type="radio"
        value="3"
      />
      <span
        class="infini-radio-inner"
      />
    </span>
    <span>
      Option C
    </span>
  </label>
  <label
    class="infini-radio-wrapper"
    style="display:block;height:30px;line-height:30px"
  >
    <span
      class="infini-radio"
    >
      <input
        class="infini-radio-input"
        type="radio"
        value="4"
      />
      <span
        class="infini-radio-inner"
      />
    </span>
    <span>
      More...
    </span>
  </label>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-options.md correctly 1`] = `
<div>
  <div
    class="infini-radio-group infini-radio-group-outline"
  >
    <label
      class="infini-radio-wrapper infini-radio-wrapper-checked"
    >
      <span
        class="infini-radio infini-radio-checked"
      >
        <input
          checked=""
          class="infini-radio-input"
          type="radio"
          value="Apple"
        />
        <span
          class="infini-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="infini-radio-wrapper"
    >
      <span
        class="infini-radio"
      >
        <input
          class="infini-radio-input"
          type="radio"
          value="Pear"
        />
        <span
          class="infini-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="infini-radio-wrapper"
    >
      <span
        class="infini-radio"
      >
        <input
          class="infini-radio-input"
          type="radio"
          value="Orange"
        />
        <span
          class="infini-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <div
    class="infini-radio-group infini-radio-group-outline"
  >
    <label
      class="infini-radio-wrapper infini-radio-wrapper-checked"
    >
      <span
        class="infini-radio infini-radio-checked"
      >
        <input
          checked=""
          class="infini-radio-input"
          type="radio"
          value="Apple"
        />
        <span
          class="infini-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="infini-radio-wrapper"
    >
      <span
        class="infini-radio"
      >
        <input
          class="infini-radio-input"
          type="radio"
          value="Pear"
        />
        <span
          class="infini-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="infini-radio-wrapper"
    >
      <span
        class="infini-radio"
      >
        <input
          class="infini-radio-input"
          type="radio"
          value="Orange"
        />
        <span
          class="infini-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <div
    class="infini-radio-group infini-radio-group-outline"
  >
    <label
      class="infini-radio-wrapper infini-radio-wrapper-checked"
    >
      <span
        class="infini-radio infini-radio-checked"
      >
        <input
          checked=""
          class="infini-radio-input"
          type="radio"
          value="Apple"
        />
        <span
          class="infini-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="infini-radio-wrapper"
    >
      <span
        class="infini-radio"
      >
        <input
          class="infini-radio-input"
          type="radio"
          value="Pear"
        />
        <span
          class="infini-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="infini-radio-wrapper"
    >
      <span
        class="infini-radio"
      >
        <input
          class="infini-radio-input"
          type="radio"
          value="Orange"
        />
        <span
          class="infini-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-with-name.md correctly 1`] = `
<div
  class="infini-radio-group infini-radio-group-outline"
>
  <label
    class="infini-radio-wrapper infini-radio-wrapper-checked"
  >
    <span
      class="infini-radio infini-radio-checked"
    >
      <input
        checked=""
        class="infini-radio-input"
        name="radiogroup"
        type="radio"
        value="1"
      />
      <span
        class="infini-radio-inner"
      />
    </span>
    <span>
      A
    </span>
  </label>
  <label
    class="infini-radio-wrapper"
  >
    <span
      class="infini-radio"
    >
      <input
        class="infini-radio-input"
        name="radiogroup"
        type="radio"
        value="2"
      />
      <span
        class="infini-radio-inner"
      />
    </span>
    <span>
      B
    </span>
  </label>
  <label
    class="infini-radio-wrapper"
  >
    <span
      class="infini-radio"
    >
      <input
        class="infini-radio-input"
        name="radiogroup"
        type="radio"
        value="3"
      />
      <span
        class="infini-radio-inner"
      />
    </span>
    <span>
      C
    </span>
  </label>
  <label
    class="infini-radio-wrapper"
  >
    <span
      class="infini-radio"
    >
      <input
        class="infini-radio-input"
        name="radiogroup"
        type="radio"
        value="4"
      />
      <span
        class="infini-radio-inner"
      />
    </span>
    <span>
      D
    </span>
  </label>
</div>
`;

exports[`renders ./components/radio/demo/size.md correctly 1`] = `
<div>
  <div>
    <div
      class="infini-radio-group infini-radio-group-outline infini-radio-group-large"
    >
      <label
        class="infini-radio-button-wrapper infini-radio-button-wrapper-checked"
      >
        <span
          class="infini-radio-button infini-radio-button-checked"
        >
          <input
            checked=""
            class="infini-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="b"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="infini-radio-group infini-radio-group-outline"
    >
      <label
        class="infini-radio-button-wrapper infini-radio-button-wrapper-checked"
      >
        <span
          class="infini-radio-button infini-radio-button-checked"
        >
          <input
            checked=""
            class="infini-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="b"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="infini-radio-group infini-radio-group-outline infini-radio-group-small"
    >
      <label
        class="infini-radio-button-wrapper infini-radio-button-wrapper-checked"
      >
        <span
          class="infini-radio-button infini-radio-button-checked"
        >
          <input
            checked=""
            class="infini-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="b"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="infini-radio-button-wrapper"
      >
        <span
          class="infini-radio-button"
        >
          <input
            class="infini-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="infini-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
</div>
`;
